<?xml version="1.0"?>
<package format="2">
  <name>omo_ar_marker</name>
  <version>0.0.1</version>
  <description>
    OMO R1 robot package - launchers for image recognition application.
  </description>
  <license>Apache 2.0</license>
  <author email="pinkwink@omorobot.com">pinkwink</author>
  <maintainer email="pinkwink@omorobot.com">pinkwink</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ar_track_alvar</exec_depend>
  <exec_depend>ar_track_alvar_msgs</exec_depend>
</package>
